packages/typ/tests/fixtures/diagnostics/0112_core_annotated_value_mismatch_10.ml.infer.expected
File "0112_core_annotated_value_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0112_core_annotated_value_mismatch_10 is not a valid module name.

File "0112_core_annotated_value_mismatch_10.ml", line 1, characters 19-20:
1 | let kappa : bool = 0
                       ^
Error: The constant 0 has type int but an expression was expected of type
         bool
